force-app/main/default/objects/GroupCensus/GroupCensus.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>