force-app/main/default/objects/GroupCensus/fields/vlocity_ins_fsc__SpecProduct2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__SpecProduct2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Group Census</relationshipLabel>
    <relationshipName>GroupCensusStd</relationshipName>
    <type>Lookup</type>
</CustomField>