force-app/main/default/objects/GroupCensus/fields/ZRH_Estado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proceso de Carga Finalizado</fullName>
            </value>
            <value>
                <fullName>Proceso de Carga Rechazado</fullName>
            </value>
            <value>
                <fullName>Incompleto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>