force-app/main/default/objects/GroupCensus/fields/ZRH_TotalDependientes__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TotalDependientes__c</fullName>
    <description>Cuenta total de dependientes en el censo</description>
    <label>Total Dependientes</label>
    <summaryFilterItems>
        <field>GroupCensusMember.RelationshipToPrimaryMember</field>
        <operation>notEqual</operation>
        <value>Titular</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupCensusMember.GroupCensusId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>