force-app/main/default/objects/GroupCensus/fields/ZRH_TotalTitulares__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TotalTitulares__c</fullName>
    <description>Cuenta total de titulares en el censo</description>
    <label>Total Titulares</label>
    <summaryFilterItems>
        <field>GroupCensusMember.RelationshipToPrimaryMember</field>
        <operation>equals</operation>
        <value>Titular</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupCensusMember.GroupCensusId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>